myapp/static/myapp/css/all.css
html {
  overflow-y: scroll;
}

/* the "slideshow" stuff is used in home and in portrait, so it's in all.css */
.myslideshow {
  height: calc(100vh - 250px);
  max-height: 750px;
  min-height: 400px;
  min-width: 300px;
  width: 100%;
  position: relative;
}

.myslide {
  height: calc(100vh - 250px);
  width: 100%;
  max-height: 750px;
  min-height: 400px;
  min-width: 300px;
  position: absolute;
  top: 0;
  opacity: 0;
}

.slideimg {
  display: block;
  max-width: 100%;
  max-height: 100%;
  padding-left: 20px;
  padding-right: 20px;
  object-fit: contain;
  height: 100%;
  width: 100%;

  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

body {
  background-color: #000000;
  color: #cdb9b0;
  font-family: "Times New Roman", Times, serif;
}

h1 {
  //font: 40px Minion;
  text-align: center;
  /* first parenthesis is the height of the slideshow */
  /* fraction multiplier is smallest width/height ratio of portraits in slideshow */
  /* 35px is to compensate for padding of h1 img (see below) */
  max-width: calc((100vh - (0.14745308311 * 480px * 2) - 40px) * (500 / 755) + 35px);
  min-width: 280px;
  margin: auto;
}

#viewnote {
  display: none;
}

h1 img {
  padding: 20px;
  /* It's not centered without this adjustment? maybe image doesn't have text centered */
  padding-left: 21px;
  width: 100%;
  max-width: 490px;
}

hr {
  color: #cdb9b0;
  background-color: #999999;
  height: 2px;
  border: none;
}

a {
  outline: 0;
}


a:link {
  color: #999999;
  color: #cdb9b0;
  text-decoration: none;
}
.clickable:hover {
  text-decoration: none;
  color: #FFFFFF;
}
a:visited {
  text-decoration: none;
  color: #999999;
  color: #cdb9b0;
}
a:hover {
  text-decoration: none;
  color: #FFFFFF;
}

svg {
  height: 12px;
  width: 12px;
  position: relative;
  top: -12%;
  fill: #cdb9b0;
}

svg:hover {
  fill: #FFFFFF;
}

#links  {
    font-size: 0.8em;
    display: flex;
    justify-content: center;
    min-width: 300px;
}

#links > a {
    display: initial;
    margin-left: 13px;
    margin-right: 13px;
    margin-top: 20px;
    margin-bottom: 20px;
}

.icons  {
    font-size: 0.8em;
    display: flex;
    justify-content: center;
    margin-top: 20px;
    margin-bottom: 50px;
}

.icons > a {
    margin-left: 10px;
    margin-right: 10px;
}
 
footer {
    text-align: center;
}

#menu {
    display: none;
}

#menu:hover {
  text-decoration: none;
  color: #FFFFFF;
  cursor: pointer;
}


#overlay {
  display: none;
  height: 100%;
  width: 100%;
  position: fixed;
  z-index: 1; /* sit at top */
  left: 0;
  top: 0;
  background-color: rgb(0,0,0); /* Black fallback color */
  overflow-x: hidden; /* Disable horizontal scroll */
}

#overlay_inner {
  padding: 60px;
}

#overlay_inner > a {
  display: block;
  margin: auto;
  padding-top: 30px;
  font-size: 1.2em;
  text-align: center;
}

#overlay_inner > .icons {
  padding-top: 60px;
}

.closebtn {
  padding-top: 30px;
  padding-right: 30px;
}

#overlay > .closebtn {
  text-align: right;
}
  




/* note: for some reason, after settings links display = none with javascript, 
   resizing the window doesn't revert their display
   

/* mobile in portrait mode */
@media screen and (max-width: 481px) {
  #menu {
    display: initial;
    margin: 20px;
  }

  svg {
    top: -15%;
  }

  .myslideshow {
    height: calc(100vh - (0.14745308311 * 480px * 2) - 80px);
  }
  .myslide {
    height: calc(100vh - (0.14745308311 * 480px * 2) - 80px);
  }


  #links a {
    display: none;
  }

  h1 {
    min-width: 300px;
  }
    
}

/* mobile in landscape mode */
@media screen and (max-height: 481px) {
  /*
  #viewnote {
    display: initial;
    text-align: center;
    display: block;
    font-style: italic;
    max-width: 92%;
    max-height: 100%;
    margin-left: 4%;
    margin-right: 4%;
  }
  */
}

